@@ -1,3 +1,9 @@
+4.x.x (2018-xx-xx)
+------------------
+
+Bug fixes
+ - [core] handle multi-valued mozillasecondemail attribute mapping
+
 4.0.1 (2018-07-10)
 ------------------
 
